--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,12 +2,11 @@
 	<title>{{ site.title }}</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="{{ '/assets/js/ie/html5shiv.js' | relative_url }}"></script><![endif]-->
+	<meta name="description" content="Just a simple design for a website" />
 	<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
-	<!--[if lte IE 8]><link rel="stylesheet" href="{{ '/assets/css/ie8.css' | relative_url }}" /><![endif]-->
-	<!--[if lte IE 9]><link rel="stylesheet" href="{{ '/assets/css/ie9.css' | relative_url }}" /><![endif]-->
+	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-2914412-12"></script>
+<script defer src="https://www.googletagmanager.com/gtag/js?id=UA-2914412-12"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
